--- a/urlHosting.example
+++ b/urlHosting.example
@@ -1,3 +1,3 @@
-Hosting URL: https://alfaweb-aa473.web.app
+Hosting URL: alfaweb-aa473.firebaseapp.com
 Usuario: admin@gmail.com
 contraseña: 123456
